Update HTML templates to include base path for static resources

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Financial Assistant - CUPK</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="/pfa/{{ url_for('static', filename='css/style.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -1118,7 +1118,7 @@
             });
         }
     </script>
-    <script src="{{ url_for('static', filename='js/dashboard-period.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/format-ribuan.js') }}"></script>
+    <script src="/pfa/{{ url_for('static', filename='js/dashboard-period.js') }}"></script>
+    <script src="/pfa/{{ url_for('static', filename='js/format-ribuan.js') }}"></script>
 </body>
 </html>
